org.aion.avm.core/test/org/aion/avm/core/rejection/RejectClass32Variables.java
package org.aion.avm.core.rejection;


/**
 * This will be rejected since it declares 32 variables.
 */
public class RejectClass32Variables extends RuntimeException {
    public int var1;
    public int var2;
    public int var3;
    public int var4;
    public int var5;
    public int var6;
    public int var7;
    public int var8;
    public int var9;
    public int var10;
    public int var11;
    public int var12;
    public int var13;
    public int var14;
    public int var15;
    public int var16;
    public int var17;
    public int var18;
    public int var19;
    public int var20;
    public int var21;
    public int var22;
    public int var23;
    public int var24;
    public int var25;
    public int var26;
    public int var27;
    public int var28;
    public int var29;
    public int var30;
    public int var31;
    public int var32;

    public static byte[] main() {
        return new byte[] { 1 };
    }
}
